--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .aider*
+
+# Ignore model checkpoints and logs
+/ev1/
+
+# Ignore Python cache files
+/__pycache__/
+
+# Ignore .vscode settings
+/.vscode/
